--- a/Preprocessing.ipynb
+++ b/Preprocessing.ipynb
@@ -20,12 +20,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-17T12:58:55.023847300Z",
-     "start_time": "2024-05-17T12:58:54.852201Z"
+     "end_time": "2024-05-17T14:38:07.101891200Z",
+     "start_time": "2024-05-17T14:38:07.076047700Z"
     }
    },
    "id": "af9f907cc76c6498",
-   "execution_count": 223
+   "execution_count": 252
   },
   {
    "cell_type": "code",
@@ -38,12 +38,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-17T12:58:55.067181800Z",
-     "start_time": "2024-05-17T12:58:55.019841100Z"
+     "end_time": "2024-05-17T14:38:08.122632700Z",
+     "start_time": "2024-05-17T14:38:08.104087500Z"
     }
    },
    "id": "b9025e7bcb3017aa",
-   "execution_count": 224
+   "execution_count": 253
   },
   {
    "cell_type": "code",
@@ -77,12 +77,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-17T12:58:55.089795300Z",
-     "start_time": "2024-05-17T12:58:55.045403400Z"
+     "end_time": "2024-05-17T14:38:08.863319400Z",
+     "start_time": "2024-05-17T14:38:08.856382700Z"
     }
    },
    "id": "25417358cfc38a93",
-   "execution_count": 225
+   "execution_count": 254
   },
   {
    "cell_type": "markdown",
@@ -107,12 +107,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-17T12:58:55.293879Z",
-     "start_time": "2024-05-17T12:58:55.075698500Z"
+     "end_time": "2024-05-17T14:38:09.646982600Z",
+     "start_time": "2024-05-17T14:38:09.412269800Z"
     }
    },
    "id": "bbfeec96fadd4e88",
-   "execution_count": 226
+   "execution_count": 255
   },
   {
    "cell_type": "code",
@@ -124,12 +124,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-17T12:58:55.295381300Z",
-     "start_time": "2024-05-17T12:58:55.279544200Z"
+     "end_time": "2024-05-17T14:38:09.648020900Z",
+     "start_time": "2024-05-17T14:38:09.637639300Z"
     }
    },
    "id": "eb6fe94c953b3055",
-   "execution_count": 227
+   "execution_count": 256
   },
   {
    "cell_type": "code",
@@ -168,12 +168,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-17T12:58:55.335339700Z",
-     "start_time": "2024-05-17T12:58:55.284065900Z"
+     "end_time": "2024-05-17T14:38:09.849556600Z",
+     "start_time": "2024-05-17T14:38:09.812497300Z"
     }
    },
    "id": "e61285af936b37d6",
-   "execution_count": 228
+   "execution_count": 257
   },
   {
    "cell_type": "markdown",
@@ -197,12 +197,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-17T12:58:55.338343200Z",
-     "start_time": "2024-05-17T12:58:55.305693500Z"
+     "end_time": "2024-05-17T14:38:10.266538700Z",
+     "start_time": "2024-05-17T14:38:10.260710200Z"
     }
    },
    "id": "ed9e7dad33474ef2",
-   "execution_count": 229
+   "execution_count": 258
   },
   {
    "cell_type": "code",
@@ -216,12 +216,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-17T12:58:55.339343400Z",
-     "start_time": "2024-05-17T12:58:55.314889100Z"
+     "end_time": "2024-05-17T14:38:10.643456800Z",
+     "start_time": "2024-05-17T14:38:10.633226100Z"
     }
    },
    "id": "2819471c0d41d40d",
-   "execution_count": 230
+   "execution_count": 259
   },
   {
    "cell_type": "code",
@@ -235,12 +235,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-17T12:58:55.339343400Z",
-     "start_time": "2024-05-17T12:58:55.320833500Z"
+     "end_time": "2024-05-17T14:38:10.871042100Z",
+     "start_time": "2024-05-17T14:38:10.862652Z"
     }
    },
    "id": "1ad6ca585fe3674b",
-   "execution_count": 231
+   "execution_count": 260
   },
   {
    "cell_type": "code",
@@ -254,12 +254,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-17T12:58:55.347861700Z",
-     "start_time": "2024-05-17T12:58:55.326868800Z"
+     "end_time": "2024-05-17T14:38:11.057160200Z",
+     "start_time": "2024-05-17T14:38:11.047271400Z"
     }
    },
    "id": "f92fad5221d6fd98",
-   "execution_count": 232
+   "execution_count": 261
   },
   {
    "cell_type": "code",
@@ -276,12 +276,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-17T12:58:55.559383500Z",
-     "start_time": "2024-05-17T12:58:55.332836500Z"
+     "end_time": "2024-05-17T14:38:11.625887500Z",
+     "start_time": "2024-05-17T14:38:11.287114200Z"
     }
    },
    "id": "7c5ab9f0bd39169b",
-   "execution_count": 233
+   "execution_count": 262
   },
   {
    "cell_type": "markdown",
@@ -308,12 +308,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-17T12:58:55.630650900Z",
-     "start_time": "2024-05-17T12:58:55.559383500Z"
+     "end_time": "2024-05-17T14:38:11.968658Z",
+     "start_time": "2024-05-17T14:38:11.894689200Z"
     }
    },
    "id": "c2c67d3dfc669885",
-   "execution_count": 234
+   "execution_count": 263
   },
   {
    "cell_type": "markdown",
@@ -336,12 +336,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-17T12:58:55.642801800Z",
-     "start_time": "2024-05-17T12:58:55.633651900Z"
+     "end_time": "2024-05-17T14:38:12.860343300Z",
+     "start_time": "2024-05-17T14:38:12.849432700Z"
     }
    },
    "id": "baa14436d5aca92",
-   "execution_count": 235
+   "execution_count": 264
   },
   {
    "cell_type": "markdown",
@@ -363,12 +363,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-17T12:58:55.666869400Z",
-     "start_time": "2024-05-17T12:58:55.643801900Z"
+     "end_time": "2024-05-17T14:38:13.487230600Z",
+     "start_time": "2024-05-17T14:38:13.471085800Z"
     }
    },
    "id": "d7c87cb49955e71c",
-   "execution_count": 236
+   "execution_count": 265
   },
   {
    "cell_type": "code",
@@ -384,12 +384,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-17T12:58:55.667868600Z",
-     "start_time": "2024-05-17T12:58:55.653701900Z"
+     "end_time": "2024-05-17T14:38:13.878540300Z",
+     "start_time": "2024-05-17T14:38:13.869329300Z"
     }
    },
    "id": "60aca679e3b1b61f",
-   "execution_count": 237
+   "execution_count": 266
   },
   {
    "cell_type": "markdown",
@@ -412,12 +412,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-17T12:58:56.186933Z",
-     "start_time": "2024-05-17T12:58:55.657994600Z"
+     "end_time": "2024-05-17T14:38:15.490802400Z",
+     "start_time": "2024-05-17T14:38:15.079909300Z"
     }
    },
    "id": "97f4ad5743cf7ca",
-   "execution_count": 238
+   "execution_count": 267
   },
   {
    "cell_type": "markdown",
@@ -440,12 +440,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-17T12:58:56.202158800Z",
-     "start_time": "2024-05-17T12:58:56.187933300Z"
+     "end_time": "2024-05-17T14:38:15.525091200Z",
+     "start_time": "2024-05-17T14:38:15.491838400Z"
     }
    },
    "id": "7db0e54e408f9ddc",
-   "execution_count": 239
+   "execution_count": 268
   },
   {
    "cell_type": "code",
@@ -460,12 +460,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-17T12:58:56.231410900Z",
-     "start_time": "2024-05-17T12:58:56.202158800Z"
+     "end_time": "2024-05-17T14:38:15.855696400Z",
+     "start_time": "2024-05-17T14:38:15.817263100Z"
     }
    },
    "id": "86717e2a1d2d0ac2",
-   "execution_count": 240
+   "execution_count": 269
   },
   {
    "cell_type": "code",
@@ -479,18 +479,18 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-17T12:58:56.959962400Z",
-     "start_time": "2024-05-17T12:58:56.228410200Z"
+     "end_time": "2024-05-17T14:38:17.083556100Z",
+     "start_time": "2024-05-17T14:38:16.335505Z"
     }
    },
    "id": "9e3b413b7cc93d02",
-   "execution_count": 241
+   "execution_count": 270
   },
   {
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "# class_counts = y_val.value_counts()\n",
+    "# class_counts = y_train.value_counts()\n",
     "# plt.pie(class_counts, labels=class_counts.index, startangle=140, autopct='%1.1f%%')\n",
     "# plt.axis('equal')\n",
     "# plt.title('대출등급')\n",
@@ -499,12 +499,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-17T12:58:56.961472400Z",
-     "start_time": "2024-05-17T12:58:56.959962400Z"
+     "end_time": "2024-05-17T14:41:22.374767600Z",
+     "start_time": "2024-05-17T14:41:22.370668Z"
     }
    },
    "id": "f08c444569638601",
-   "execution_count": 242
+   "execution_count": 274
   },
   {
    "cell_type": "markdown",
