--- a/Preprocessing.ipynb
+++ b/Preprocessing.ipynb
@@ -406,8 +406,7 @@
    "outputs": [],
    "source": [
     "df_4 = df_3.copy()\n",
-    "df_4 = df_4.drop(columns=['총상환원금', '총상환이자'])\n",
-    "df_4.to_csv('Files/train_pre.csv')"
+    "df_4 = df_4.drop(columns=['총상환원금', '총상환이자'])"
    ],
    "metadata": {
     "collapsed": false,
