--- a/Postprocessing.ipynb
+++ b/Postprocessing.ipynb
@@ -15,12 +15,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-17T15:01:31.356767100Z",
-     "start_time": "2024-05-17T15:01:31.349604200Z"
+     "end_time": "2024-05-18T04:32:05.668673700Z",
+     "start_time": "2024-05-18T04:32:05.667164Z"
     }
    },
    "id": "5a7365216f084516",
-   "execution_count": 116
+   "execution_count": 285
   },
   {
    "cell_type": "code",
@@ -32,19 +32,19 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-17T15:01:31.394117100Z",
-     "start_time": "2024-05-17T15:01:31.355671400Z"
+     "end_time": "2024-05-18T04:32:05.713260200Z",
+     "start_time": "2024-05-18T04:32:05.672674700Z"
     }
    },
    "id": "7c1006d94f65567c",
-   "execution_count": 117
+   "execution_count": 286
   },
   {
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "i = 0\n",
-    "name_list = ['None', 'SMOTE', 'Adasyn', 'KMeansSMOTE']\n",
+    "i = 2\n",
+    "name_list = ['None', 'SMOTE', 'ADASYN', 'KMeanSMOTE']\n",
     "best_dt = joblib.load(f'Files/dt_{name_list[i]}_model.pkl')\n",
     "best_lgb = joblib.load(f'Files/lgb_{name_list[i]}_model.pkl')\n",
     "best_xgb = joblib.load(f'Files/xgb_{name_list[i]}_model.pkl')\n",
@@ -53,12 +53,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-17T15:01:31.564424500Z",
-     "start_time": "2024-05-17T15:01:31.395202600Z"
+     "end_time": "2024-05-18T04:32:05.877188600Z",
+     "start_time": "2024-05-18T04:32:05.714260600Z"
     }
    },
    "id": "2884b122625004ed",
-   "execution_count": 118
+   "execution_count": 287
   },
   {
    "cell_type": "code",
@@ -67,12 +67,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[LightGBM] [Warning] Accuracy may be bad since you didn't explicitly set num_leaves OR 2^max_depth > num_leaves. (num_leaves=31).\n",
-      "DT F1-Score:0.9459\n",
-      "lightGBM F1-Score:0.9424\n",
-      "XGBoost F1-Score:0.9414\n",
-      "CatBoost F1-Score:0.9283\n",
-      "Soft Voting F1-Score:0.9478\n"
+      "[LightGBM] [Warning] Accuracy may be bad since you didn't explicitly set num_leaves OR 2^max_depth > num_leaves. (num_leaves=31).\n"
      ]
     }
    ],
@@ -87,23 +82,81 @@
     "lgb_result = np.argmax(proba2, axis=1)\n",
     "xgb_result = np.argmax(proba3, axis=1)\n",
     "cat_result = np.argmax(proba4, axis=1)\n",
-    "soft_voting_result = np.argmax(average_proba, axis=1)\n",
-    "\n",
-    "print(f\"DT F1-Score:{f1_score(test_out, dt_result, average='micro'):.4f}\")\n",
-    "print(f\"lightGBM F1-Score:{f1_score(test_out, lgb_result, average='micro'):.4f}\")\n",
-    "print(f\"XGBoost F1-Score:{f1_score(test_out, xgb_result, average='micro'):.4f}\")\n",
-    "print(f\"CatBoost F1-Score:{f1_score(test_out, cat_result, average='micro'):.4f}\")\n",
-    "print(f\"Soft Voting F1-Score:{f1_score(test_out, soft_voting_result, average='micro'):.4f}\")"
+    "soft_voting_result = np.argmax(average_proba, axis=1)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-17T15:01:32.009182100Z",
-     "start_time": "2024-05-17T15:01:31.567511400Z"
+     "end_time": "2024-05-18T04:32:06.412923900Z",
+     "start_time": "2024-05-18T04:32:05.877188600Z"
     }
    },
    "id": "65e7e43f7919bdf6",
-   "execution_count": 119
+   "execution_count": 288
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DT AUC:0.98984\n",
+      "lightGBM AUC:0.99695\n",
+      "XGBoost AUC:0.99696\n",
+      "CatBoost AUC:0.99524\n",
+      "Soft Voting AUC:0.99736\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"DT AUC:{roc_auc_score(test_out, proba1, multi_class='ovr', average='weighted'):.5f}\")\n",
+    "print(f\"lightGBM AUC:{roc_auc_score(test_out, proba2, multi_class='ovr', average='weighted'):.5f}\")\n",
+    "print(f\"XGBoost AUC:{roc_auc_score(test_out, proba3, multi_class='ovr', average='weighted'):.5f}\")\n",
+    "print(f\"CatBoost AUC:{roc_auc_score(test_out, proba4, multi_class='ovr', average='weighted'):.5f}\")\n",
+    "print(f\"Soft Voting AUC:{roc_auc_score(test_out, average_proba, multi_class='ovr', average='weighted'):.5f}\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-05-18T04:32:06.550690200Z",
+     "start_time": "2024-05-18T04:32:06.414924500Z"
+    }
+   },
+   "id": "3367d0323f32e8c2",
+   "execution_count": 289
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DT F1-Score:0.94485\n",
+      "lightGBM F1-Score:0.93808\n",
+      "XGBoost F1-Score:0.94010\n",
+      "CatBoost F1-Score:0.92474\n",
+      "Soft Voting F1-Score:0.94551\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"DT F1-Score:{f1_score(test_out, dt_result, average='weighted'):.5f}\")\n",
+    "print(f\"lightGBM F1-Score:{f1_score(test_out, lgb_result, average='weighted'):.5f}\")\n",
+    "print(f\"XGBoost F1-Score:{f1_score(test_out, xgb_result, average='weighted'):.5f}\")\n",
+    "print(f\"CatBoost F1-Score:{f1_score(test_out, cat_result, average='weighted'):.5f}\")\n",
+    "print(f\"Soft Voting F1-Score:{f1_score(test_out, soft_voting_result, average='weighted'):.5f}\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-05-18T04:32:06.603699900Z",
+     "start_time": "2024-05-18T04:32:06.547687900Z"
+    }
+   },
+   "id": "bc7cf48f88e1576d",
+   "execution_count": 290
   }
  ],
  "metadata": {
