--- a/Preprocessing.ipynb
+++ b/Preprocessing.ipynb
@@ -8,6 +8,7 @@
     "import warnings\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "from joblib import dump\n",
     "from sklearn.metrics import *\n",
     "from matplotlib import pyplot as plt\n",
     "from scipy.stats.mstats import winsorize\n",
@@ -20,12 +21,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-18T05:18:41.663318800Z",
-     "start_time": "2024-05-18T05:18:41.524833700Z"
+     "end_time": "2024-05-22T04:32:37.588537300Z",
+     "start_time": "2024-05-22T04:32:37.554781500Z"
     }
    },
    "id": "af9f907cc76c6498",
-   "execution_count": 203
+   "execution_count": 18
   },
   {
    "cell_type": "code",
@@ -38,12 +39,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-18T05:18:41.679866500Z",
-     "start_time": "2024-05-18T05:18:41.666320500Z"
+     "end_time": "2024-05-22T04:32:37.739600400Z",
+     "start_time": "2024-05-22T04:32:37.734615900Z"
     }
    },
    "id": "b9025e7bcb3017aa",
-   "execution_count": 204
+   "execution_count": 19
   },
   {
    "cell_type": "code",
@@ -77,12 +78,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-18T05:18:41.698113300Z",
-     "start_time": "2024-05-18T05:18:41.681907900Z"
+     "end_time": "2024-05-22T04:32:37.921405300Z",
+     "start_time": "2024-05-22T04:32:37.915895500Z"
     }
    },
    "id": "25417358cfc38a93",
-   "execution_count": 205
+   "execution_count": 20
   },
   {
    "cell_type": "markdown",
@@ -107,12 +108,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-18T05:18:41.939358700Z",
-     "start_time": "2024-05-18T05:18:41.700113500Z"
+     "end_time": "2024-05-22T04:32:38.496802600Z",
+     "start_time": "2024-05-22T04:32:38.268305500Z"
     }
    },
    "id": "bbfeec96fadd4e88",
-   "execution_count": 206
+   "execution_count": 21
   },
   {
    "cell_type": "code",
@@ -124,12 +125,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-18T05:18:41.940359Z",
-     "start_time": "2024-05-18T05:18:41.907067300Z"
+     "end_time": "2024-05-22T04:32:38.505508900Z",
+     "start_time": "2024-05-22T04:32:38.499464900Z"
     }
    },
    "id": "eb6fe94c953b3055",
-   "execution_count": 207
+   "execution_count": 22
   },
   {
    "cell_type": "code",
@@ -168,12 +169,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-18T05:18:41.941552Z",
-     "start_time": "2024-05-18T05:18:41.909640300Z"
+     "end_time": "2024-05-22T04:32:38.654254Z",
+     "start_time": "2024-05-22T04:32:38.625749300Z"
     }
    },
    "id": "e61285af936b37d6",
-   "execution_count": 208
+   "execution_count": 23
   },
   {
    "cell_type": "markdown",
@@ -197,12 +198,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-18T05:18:42.004473100Z",
-     "start_time": "2024-05-18T05:18:41.936358Z"
+     "end_time": "2024-05-22T04:32:39.032309400Z",
+     "start_time": "2024-05-22T04:32:39.028226300Z"
     }
    },
    "id": "ed9e7dad33474ef2",
-   "execution_count": 209
+   "execution_count": 24
   },
   {
    "cell_type": "code",
@@ -216,12 +217,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-18T05:18:42.017444700Z",
-     "start_time": "2024-05-18T05:18:41.944505900Z"
+     "end_time": "2024-05-22T04:32:39.229298300Z",
+     "start_time": "2024-05-22T04:32:39.207480100Z"
     }
    },
    "id": "2819471c0d41d40d",
-   "execution_count": 210
+   "execution_count": 25
   },
   {
    "cell_type": "code",
@@ -235,12 +236,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-18T05:18:42.019445200Z",
-     "start_time": "2024-05-18T05:18:41.954789800Z"
+     "end_time": "2024-05-22T04:32:39.429770900Z",
+     "start_time": "2024-05-22T04:32:39.422421900Z"
     }
    },
    "id": "1ad6ca585fe3674b",
-   "execution_count": 211
+   "execution_count": 26
   },
   {
    "cell_type": "code",
@@ -254,12 +255,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-18T05:18:42.020445800Z",
-     "start_time": "2024-05-18T05:18:41.966205Z"
+     "end_time": "2024-05-22T04:32:39.607056900Z",
+     "start_time": "2024-05-22T04:32:39.601185700Z"
     }
    },
    "id": "f92fad5221d6fd98",
-   "execution_count": 212
+   "execution_count": 27
   },
   {
    "cell_type": "code",
@@ -276,12 +277,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-18T05:18:42.195406300Z",
-     "start_time": "2024-05-18T05:18:41.978461800Z"
+     "end_time": "2024-05-22T04:32:40.122592500Z",
+     "start_time": "2024-05-22T04:32:40.072251400Z"
     }
    },
    "id": "7c5ab9f0bd39169b",
-   "execution_count": 213
+   "execution_count": 28
   },
   {
    "cell_type": "markdown",
@@ -308,12 +309,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-18T05:18:42.265174600Z",
-     "start_time": "2024-05-18T05:18:42.195406300Z"
+     "end_time": "2024-05-22T04:32:40.286270800Z",
+     "start_time": "2024-05-22T04:32:40.211372900Z"
     }
    },
    "id": "c2c67d3dfc669885",
-   "execution_count": 214
+   "execution_count": 29
   },
   {
    "cell_type": "markdown",
@@ -336,12 +337,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-18T05:18:42.278225600Z",
-     "start_time": "2024-05-18T05:18:42.268703200Z"
+     "end_time": "2024-05-22T04:32:40.744259900Z",
+     "start_time": "2024-05-22T04:32:40.721329600Z"
     }
    },
    "id": "baa14436d5aca92",
-   "execution_count": 215
+   "execution_count": 30
   },
   {
    "cell_type": "markdown",
@@ -363,12 +364,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-18T05:18:42.288318300Z",
-     "start_time": "2024-05-18T05:18:42.278225600Z"
+     "end_time": "2024-05-22T04:32:41.143260800Z",
+     "start_time": "2024-05-22T04:32:41.128689900Z"
     }
    },
    "id": "d7c87cb49955e71c",
-   "execution_count": 216
+   "execution_count": 31
   },
   {
    "cell_type": "code",
@@ -384,12 +385,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-18T05:18:42.300190600Z",
-     "start_time": "2024-05-18T05:18:42.289316600Z"
+     "end_time": "2024-05-22T04:32:41.361263Z",
+     "start_time": "2024-05-22T04:32:41.353751700Z"
     }
    },
    "id": "60aca679e3b1b61f",
-   "execution_count": 217
+   "execution_count": 32
   },
   {
    "cell_type": "markdown",
@@ -411,12 +412,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-18T05:18:42.322831700Z",
-     "start_time": "2024-05-18T05:18:42.294056300Z"
+     "end_time": "2024-05-22T04:32:42.013291600Z",
+     "start_time": "2024-05-22T04:32:41.997281200Z"
     }
    },
    "id": "97f4ad5743cf7ca",
-   "execution_count": 218
+   "execution_count": 33
   },
   {
    "cell_type": "markdown",
@@ -439,12 +440,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-18T05:18:42.334952300Z",
-     "start_time": "2024-05-18T05:18:42.310819Z"
+     "end_time": "2024-05-22T04:32:42.553425200Z",
+     "start_time": "2024-05-22T04:32:42.536889300Z"
     }
    },
    "id": "7db0e54e408f9ddc",
-   "execution_count": 219
+   "execution_count": 34
   },
   {
    "cell_type": "code",
@@ -459,12 +460,37 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-18T05:18:42.366222800Z",
-     "start_time": "2024-05-18T05:18:42.327390500Z"
+     "end_time": "2024-05-22T04:32:42.896931Z",
+     "start_time": "2024-05-22T04:32:42.865526900Z"
     }
    },
    "id": "86717e2a1d2d0ac2",
-   "execution_count": 220
+   "execution_count": 35
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "['Database/scaler.joblib']"
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dump(scaler, f'Database/scaler.joblib')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-05-22T04:32:44.020295900Z",
+     "start_time": "2024-05-22T04:32:43.998383100Z"
+    }
+   },
+   "id": "82b8532aed5fd2bf",
+   "execution_count": 36
   },
   {
    "cell_type": "code",
@@ -484,23 +510,6 @@
    },
    "id": "9e3b413b7cc93d02",
    "execution_count": 221
-  },
-  {
-   "cell_type": "code",
-   "outputs": [],
-   "source": [
-    "inverse_mapping = {v: k for k, v in mapping.items()}\n",
-    "y_train_r = y_train.map(inverse_mapping)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-05-18T05:18:42.380840900Z",
-     "start_time": "2024-05-18T05:18:42.359717300Z"
-    }
-   },
-   "id": "9b697910625b63f0",
-   "execution_count": 222
   },
   {
    "cell_type": "code",
