--- a/Preprocessing.ipynb
+++ b/Preprocessing.ipynb
@@ -117,6 +117,40 @@
   },
   {
    "cell_type": "code",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "77035"
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": "19259"
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(train)\n",
+    "len(test)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-05-22T07:12:35.242184400Z",
+     "start_time": "2024-05-22T07:12:35.225893600Z"
+    }
+   },
+   "id": "fcc308d2f7e533c7",
+   "execution_count": 51
+  },
+  {
+   "cell_type": "code",
    "outputs": [],
    "source": [
     "discrete_list = ['대출기간', '주택소유상태', '대출목적', '최근_2년간_연체_횟수', '연체계좌수', '총연체금액', '부채_대비_소득_비율', '대출등급']\n",
