--- a/Postprocessing.ipynb
+++ b/Postprocessing.ipynb
@@ -10,7 +10,6 @@
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "from sklearn.metrics import *\n",
-    "from collections import Counter\n",
     "from matplotlib import pyplot as plt\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
     "from IPython.core.interactiveshell import InteractiveShell\n",
@@ -67,7 +66,7 @@
    "outputs": [],
    "source": [
     "i = 5\n",
-    "name_list = ['None', 'SMOTE', 'ADASYN', 'KMeanSMOTE', 'SMOTE_all', 'KMeanSMOTE_all']\n",
+    "name_list = ['None', 'SMOTE', 'ADASYN', 'KMeanSMOTE', 'SMOTE_all', 'KMeanSMOTE_all', 'Custom_SMOTE']\n",
     "best_dt = joblib.load(f'Files/dt_{name_list[i]}_model.pkl')\n",
     "best_lgb = joblib.load(f'Files/lgb_{name_list[i]}_model.pkl')\n",
     "best_xgb = joblib.load(f'Files/xgb_{name_list[i]}_model.pkl')\n",
@@ -76,8 +75,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-22T10:19:31.327010200Z",
-     "start_time": "2024-05-22T10:19:30.776310600Z"
+     "end_time": "2024-05-24T09:56:46.430111600Z",
+     "start_time": "2024-05-24T09:56:45.849915300Z"
     }
    },
    "id": "2884b122625004ed",
@@ -110,12 +109,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-22T10:19:32.244901900Z",
-     "start_time": "2024-05-22T10:19:31.806199800Z"
+     "end_time": "2024-05-24T09:56:54.756648200Z",
+     "start_time": "2024-05-24T09:56:54.653980200Z"
     }
    },
    "id": "65e7e43f7919bdf6",
-   "execution_count": 7
+   "execution_count": 8
   },
   {
    "cell_type": "code",
@@ -127,12 +126,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-22T10:19:32.834985800Z",
-     "start_time": "2024-05-22T10:19:32.828529600Z"
+     "end_time": "2024-05-24T09:57:04.922371800Z",
+     "start_time": "2024-05-24T09:57:04.917515700Z"
     }
    },
    "id": "79842fc29e55c1d1",
-   "execution_count": 8
+   "execution_count": 9
   },
   {
    "cell_type": "code",
